--- a/electronApp/package.json
+++ b/electronApp/package.json
@@ -18,5 +18,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^3.0.3"
+  },
+  "dependencies": {
+    "amqplib": "^0.5.2"
   }
 }
