--- a/electronApp/package.json
+++ b/electronApp/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "amqplib": "^0.5.2",
+    "animejs": "^2.2.0",
     "bootstrap": "^4.1.3",
     "package.json": "^2.0.1"
   }
